--- a/Chess.WPFApplication/MainWindow.xaml
+++ b/Chess.WPFApplication/MainWindow.xaml
@@ -123,12 +123,14 @@
             <TextBlock>Rook</TextBlock>
             <TextBlock>Pawn</TextBlock>
         </ComboBox>
-        <ComboBox Style="{StaticResource ComboBox}" x:Name="Combo_ColorSelection" Grid.Column="10" Margin="0,49,0,85" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="50" FontSize="24">
+        <ComboBox Style="{StaticResource ComboBox}" x:Name="Combo_ColorSelection" Grid.Column="10" Margin="0,49,0,85"
+                  Grid.Row="0" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="300" Height="50" FontSize="24">
             <TextBlock>Black</TextBlock>
             <TextBlock>White</TextBlock>
         </ComboBox>
-        <Button x:Name="btn_AddFigure" Content="Добавить фигуру" Grid.Column="10" HorizontalAlignment="Center" Grid.Row="4" VerticalAlignment="Center" FontSize="24" Click="btn_AddFigure_Click"/>
-        <TextBox x:Name="textBox_Coordinates" Grid.Column="10" HorizontalAlignment="Center" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" FontSize="24"/>
+        <Button x:Name="btn_AddFigure" Content="Добавить фигуру" Grid.Column="10" HorizontalAlignment="Center" Grid.Row="5" VerticalAlignment="Center" FontSize="24" Click="btn_AddFigure_Click"/>
+        <Label Grid.Row="3" Grid.Column="10" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24">Координаты (формат A1)</Label>
+        <TextBox x:Name="textBox_Coordinates" Grid.Column="10" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Width="230" FontSize="24"/>
         <Label Content="ПКМ - удалить фигуру" Grid.Column="10" HorizontalAlignment="Center" Grid.Row="8" VerticalAlignment="Center" FontSize="24"/>
 
     </Grid>
